--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "firebase": "^10.7.1",
+    "next": "14.0.4",
     "react": "^18",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "sass": "^1.69.7",
+    "typescript": "^5"
   }
 }
