--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,25 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "@typescript-eslint",
+        "react",
+        "unused-imports"
+    ],
+    "rules": {
+        "no-unused-vars": "warn",
+        "unused-imports/no-unused-imports": "warn"
+    }
 }
