--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
     "next": "14.0.4",
@@ -16,14 +17,21 @@
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
-    "react-toastify": "^9.1.3"
+    "react-redux": "^9.1.0",
+    "react-toastify": "^9.1.3",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/react-redux": "^7.1.33",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "sass": "^1.69.7",
     "typescript": "^5"
   }
