--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
