--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=123456
+
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LdiA2UpAAAAAI3yRQJ6LtU6oSkp_5hIw7fJ5dD2
+RECAPTCHA_SECRET_KEY=6LdiA2UpAAAAAF_QRartgac5wajHkXbRw7EiPhvW
