--- a/.env
+++ b/.env
@@ -3,3 +3,13 @@ NEXTAUTH_SECRET=123456
 
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LdiA2UpAAAAAI3yRQJ6LtU6oSkp_5hIw7fJ5dD2
 RECAPTCHA_SECRET_KEY=6LdiA2UpAAAAAF_QRartgac5wajHkXbRw7EiPhvW
+
+
+
+NEXT_PUBLIC_API_KEY=AIzaSyBYY2zLOaO0RWHUWQ7U1OQYOJbk9CB6vTg
+NEXT_PUBLIC_AUTH_DOMAIN=dagpacket-plataforma.firebaseapp.com
+NEXT_PUBLIC_PROJECT_ID=dagpacket-plataforma
+NEXT_PUBLIC_STORAGE_BUCKET=dagpacket-plataforma.appspot.com
+NEXT_PUBLIC_MESSAGING_SENDER_ID=628490033893
+NEXT_PUBLIC_MESSAGING_APP_ID=1:628490033893:web:79f6ec5ff811f54235d20c
+NEXT_PUBLIC_MEASUREMENT_ID=G-Q5CY6K4Q92
