--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "env-cmd -f .env.dev next dev",
+    "prod": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.4.5",
+    "env-cmd": "^10.1.0",
     "firebase": "^10.7.1",
     "moment": "^2.30.1",
     "next": "14.0.4",
