--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
